--- a/login html/Assignment05.html
+++ b/login html/Assignment05.html
@@ -62,7 +62,7 @@
 	<br>
 		<center>
 			<table>
-			<form action="index.html">
+			<form action="index.php">
 					<tr>
 						<td>
 							<input type="submit" name="submit" value="logout">
