--- a/login html/forgotthepassword.html
+++ b/login html/forgotthepassword.html
@@ -40,7 +40,7 @@
 			<input type="password" name="Password">
 		<br>
 		<br>
-			<button><a href="index.html">Reset Password</a></button>
+			<button><a href="index.php">Reset Password</a></button>
 	</form>
 	</center>
 
